--- a/cmd/webapi/Poster.ipynb
+++ b/cmd/webapi/Poster.ipynb
@@ -25,6 +25,33 @@
     "\n",
     "print(ret)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "{'hash': 'MjUzMzg3ZTg2MjBlZTE4OTZjNzY4MDk3ODI0MDZlMTM5YmNlMzU4NjBhYWEwZDYxOTkxOTY1MzE5YmEwZGMzMg=='}\n"
+     ]
+    }
+   ],
+   "source": [
+    "address = 'http://localhost:3000'\n",
+    "\n",
+    "try:\n",
+    "    ret = requests.put(f'{address}/session', json={\"username-string\" : \"Andrea\"})\n",
+    "except:\n",
+    "    print(f\"Error while querying {address}/api/Poster\")\n",
+    "\n",
+    "print(ret)\n",
+    "\n",
+    "print(ret.json())"
+   ]
   }
  ],
  "metadata": {
